Added Image feature for the products.

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
